--- a/src/app/pages/expolers/expolers.component.html
+++ b/src/app/pages/expolers/expolers.component.html
@@ -112,13 +112,26 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr
-                    *ngFor="let subfolder of subfolders"
-                    (click)="loadFiles(subfolder.id)"
-                  >
-                    <td>{{ subfolder.name_subfolder }}</td>
-                    <td>{{ subfolder.ukuran_subfolder }}</td>
-                  </tr>
+                  <ng-container *ngFor="let subfolder of subfolders">
+                    <tr (click)="toggleSubfolder(subfolder.id)">
+                      <td>{{ subfolder.name_subfolder }}</td>
+                      <td>{{ subfolder.ukuran_subfolder }}</td>
+                    </tr>
+
+                    <tr *ngIf="activeSubfolderId === subfolder.id">
+                      <td colspan="2">
+                        <ul *ngIf="files.length > 0; else noFilesTemplate">
+                          <li *ngFor="let file of files">
+                            {{ file.name_files }} - {{ file.ukuran_files }}
+                          </li>
+                        </ul>
+                        <!-- Template untuk "No files" -->
+                        <ng-template #noFilesTemplate>
+                          <p>No files</p>
+                        </ng-template>
+                      </td>
+                    </tr>
+                  </ng-container>
                 </tbody>
               </table>
             </div>
