--- a/src/app/pages/expolers/expolers.component.css
+++ b/src/app/pages/expolers/expolers.component.css
@@ -19,6 +19,28 @@ tbody tr:hover {
   background-color: #f1f1f1; /* Warna latar belakang saat hover */
 }
 
-.custom-table {
-  min-width: 50rem;
+.div-utama {
+  width: 50%;
+  height: 100%;
+  border-right: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+.div-sub {
+  font-size: 1.6em;
+  font-weight: bold;
+  color: white;
+  background-color: #ad1d0d;
+  text-align: center;
+  padding: 20px 30px;
+  margin-bottom: 30px;
+  margin-right: 10px;
+  border-radius: 10px;
+}
+
+.div-card {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-right: 10px;
+  height: 80vh;
 }
