--- a/src/app/pages/expolers/expolers.component.html
+++ b/src/app/pages/expolers/expolers.component.html
@@ -1,38 +1,9 @@
 <div ng-controller="FolderController">
   <div style="display: flex; height: 97vh; box-sizing: border-box">
     <!-- Sidebar kiri untuk folder -->
-    <div
-      style="
-        width: 50%;
-        height: 100%;
-        border-right: 1px solid #ccc;
-        box-sizing: border-box;
-      "
-    >
-      <div
-        style="
-          font-size: 1.6em;
-          font-weight: bold;
-          color: white;
-          background-color: #ad1d0d;
-          text-align: center;
-          padding: 20px 30px;
-          margin-bottom: 30px;
-          margin-right: 10px;
-          border-radius: 10px;
-        "
-      >
-        Panel Kiri
-      </div>
-      <div
-        class="card"
-        style="
-          border: 1px solid #ccc;
-          border-radius: 5px;
-          margin-right: 10px;
-          height: 80vh;
-        "
-      >
+    <div class="div-utama">
+      <div class="div-sub">Panel Kiri</div>
+      <div class="card div-card">
         <div
           class="m-portlet__body"
           style="margin-left: 30px; margin-right: 20px"
@@ -64,38 +35,9 @@
     </div>
 
     <!-- Tabel kanan untuk subfolder dan file -->
-    <div
-      style="
-        width: 50%;
-        height: 100%;
-        padding-left: 20px;
-        box-sizing: border-box;
-      "
-    >
-      <div
-        style="
-          font-size: 1.6em;
-          font-weight: bold;
-          color: white;
-          background-color: #ad1d0d;
-          text-align: center;
-          padding: 20px 30px;
-          margin-bottom: 30px;
-          margin-right: 10px;
-          border-radius: 10px;
-        "
-      >
-        Panel Kanan
-      </div>
-      <div
-        class="card"
-        style="
-          border: 1px solid #ccc;
-          border-radius: 5px;
-          margin-right: 10px;
-          height: 80vh;
-        "
-      >
+    <div class="div-utama">
+      <div class="div-sub" style="margin-left: 10px">Panel Kanan</div>
+      <div class="card div-card" style="margin-left: 10px">
         <div
           class="m-portlet__body"
           style="margin-left: 30px; margin-right: 20px"
