--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -46,7 +46,7 @@
 
         <br />
         <div class="register">
-          <p>Don't have an account? <a routerLink="/register">Register</a></p>
+          <p>Don't have an account? <a href="/register">Register</a></p>
         </div>
         <small>Copyright 2025 © Mokhamad Gustiawan</small>
       </div>
